--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^3.3.2",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "postcss-nested": "^6.0.1",
     "tailwindcss": "^3.3.3"
   }
 }
