--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/svelte": "^4.0.3",
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.3.2",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "postcss-nested": "^6.0.1",
+    "svelte": "^4.2.2",
     "tailwindcss": "^3.3.3"
   }
 }
