--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/svelte": "^4.0.3",
     "@astrojs/tailwind": "^5.0.2",
+    "@sendgrid/mail": "^7.7.0",
     "astro": "^3.3.2",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
